--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <textarea id="wordsArea" placeholder="Number as words" readonly></textarea>
 
     <br>
-    <footer>If you're a designer and want to make this look better, send a pull request on <a href="https://github.com/KeelyHill/tuppers-formula">GitHub</a>.<br><br>
+    <footer>THIS PROJECT FORKED BY MATT. If you're a designer and want to make this look better, send a pull request on <a href="https://github.com/KeelyHill/tuppers-formula">GitHub</a>.<br><br>
     Have an idea for a preset, add it as a 'enhancement' issue on <a href="https://github.com/KeelyHill/tuppers-formula/issues">GitHub</a> or contact me.<br><br>
     &copy;2015 <a href="http://keelyhill.com">Keely Hill</a> /u/Yeelk on reddit</footer>
     <br>
